# MathTool

./: .gitignore  CMakeLists.txt  README.md
include/: math_express.h  state_machine.h
include/math_tool/: math_express.h  state_machine.h
resources/: State-transition-diagram.drawio
src/: CMakeLists.txt  basic_states.cc
